<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="264dp"
        android:layout_height="38dp"
        android:layout_marginTop="200dp"
        android:background="#6EE1AF"
        android:text="@string/title"
        android:textColor="#640AF6"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginTop="584dp"
        android:layout_marginEnd="128dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textColor="#FFE500"
        android:textColorHighlight="#912323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginTop="636dp"
        android:layout_marginEnd="128dp"
        android:text="@string/view"
        android:textAlignment="center"
        android:textColor="#FFE500"
        android:textColorHighlight="#912323"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="425dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="275dp"
        android:background="#FFFFFF"
        android:text="@string/name"
        android:textAllCaps="true"
        android:textColor="#F60303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="81dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="350dp"
        android:background="#FFFFFF"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="#F60303"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="425dp"
        android:text="@string/courses"
        android:textAllCaps="true"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="500dp"
        android:text="@string/fee"
        android:textColor="#FA0202"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="187dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="128dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>




